--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "A risk like game in Typescript",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "author": "Fernando Escolar <f.escolar@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "sass": "^1.49.0",
+    "typescript": "^4.5.5",
+    "vite": "^2.7.13"
   }
 }
