--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
     "compilerOptions": {
-        "module": "amd",
-        "target": "ES2015",
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "outFile": "index.js",
-        "sourceRoot": "./src/",
-        "rootDir": "./src/",
-        "sourceMap": true,
-        "outDir": "dist"
+      "target": "ESNext",
+      "useDefineForClassFields": true,
+      "module": "ESNext",
+      "lib": ["ESNext", "DOM"],
+      "moduleResolution": "Node",
+      "strict": true,
+      "sourceMap": true,
+      "resolveJsonModule": true,
+      "esModuleInterop": true,
+      "noEmit": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noImplicitReturns": true
     },
-    "lib": ["es2015"]
-}
+    "include": ["./src"]
+  }
