--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rimraf  \"src/**/*.js.map\" && rimraf  \"src/**/*.js\" && rimraf dist"
   },
   "author": "Fernando Escolar <f.escolar@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^17.0.13",
     "@vitejs/plugin-vue": "^2.1.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.49.0",
     "typescript": "^4.5.5",
     "vite": "^2.7.13",
+    "vite-plugin-pwa": "^0.11.13",
     "vue-tsc": "^0.31.1"
   },
   "dependencies": {
