--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     },
     "lib": ["esnext", "dom"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/service-worker.js"]
 }
