--- a/public/web.config
+++ b/public/web.config
@@ -6,6 +6,8 @@
    <staticContent>
        <remove fileExtension=".otf" />
        <mimeMap fileExtension=".otf" mimeType="font/otf" />
+       <mimeMap fileExtension=".json" mimeType="application/json" />
+       <mimeMap fileExtension=".webmanifest" mimeType="application/json" />
     </staticContent>
 </system.webServer>
 </configuration>
